--- a/arxiv/arxiv_paper_main.tex
+++ b/arxiv/arxiv_paper_main.tex
@@ -29,8 +29,8 @@
 \def\columnseprulecolor{\color{Plum}}
 
 % Simple macros.
-\def\sec#1{Sec.~\ref{#1}}
-\def\Sec#1{Sec.~\ref{#1}}
+\def\sec#1{Sec.~\ref{sec:#1}}
+\def\Sec#1{Sec.~\ref{sec:#1}}
 \def\fig#1{Fig.~\ref{#1}}
 \def\Fig#1{Fig.~\ref{#1}}
 \def\tableref#1{Table~\ref{#1}}
