--- a/arxiv/introduction.tex
+++ b/arxiv/introduction.tex
@@ -24,7 +24,7 @@ The paper is organized as follows.
 In \sec{datasets} we digest into details of both CLEVR and CoGenT datasets, emphasizing their differences.
 Next, in \sec{models}) we present both MAC and S-MAC models and explain what motivated the formulation of equations for the latter.
 \sec{experiments} discusses the most important findings when using transfer learning on CLEVR and both versions of CoGenT.
-In order to facilitate the lecture we cherry-picked a subset of experiments -- the whole table with comparison of both MAC and S-MAC models when training/fine-tuning/testing MAC and S-MAC models on different datasets can be found in Appendix A.
-Additionally, in \sec{failures} we present examples that support our hypotheses on lack of disentanglement of concepts in both models.
-\sec{comparison} presents 
+In order to facilitate the lecture in \sec{transfer_learning} we cherry-picked a subset of experiments -- the whole table with comparison of both MAC and S-MAC models when training/fine-tuning/testing can be found in Appendix~\ref{sec:full_comparison}.
+In \sec{failures} we present examples that support hypothesis on the lack of disentanglement of concepts in both models.
+\sec{comparison} presents results obtained by other state-of-the-art models, and additionally indicates a problem with their reproducibility. 
 We conclude the paper in \sec{conclusion}.
