Minor edits. Reworded a few sentences

--- a/arxiv/arxiv_paper_main.tex
+++ b/arxiv/arxiv_paper_main.tex
@@ -87,7 +87,7 @@ We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a s
 \input{comparison}
 \input{conclusion}
 
-\newpage
+%\newpage
 \bibliographystyle{alpha}
 \bibliography{../vigil_bibliography}
 
