--- a/arxiv/comparison.tex
+++ b/arxiv/comparison.tex
@@ -78,7 +78,7 @@ Both modules are implemented by neural networks, and were trained using a combin
 
 The authors inform that in the first step they trained their models on Condition A, and tested them on both conditions. 
 Next, they fine-tuned these models on Condition B using 3K images and 30K questions, and again tested on both conditions.
-Sadly, it is not clear which sets they used for fine-tuning (as Condition B lacks a training set).
+We could not ascertain which sets they used for fine-tuning (as Condition B lacks a training set).
 Being the authors of the CLEVR and CoGenT datasets, it is possible that they generated specific sets. Additionally, as they own the ground truth answers for the test sets, it is likely that they reported the accuracies on both Condition A and Condition B test sets.
 
 \subsubsection{The FiLM model and training methodology}
