--- a/arxiv/introduction.tex
+++ b/arxiv/introduction.tex
@@ -20,10 +20,13 @@ Second, we show that both models achieve comparable performance with zero-shot l
 Last, we illustrate using CoGenT-B that, without adequate care, fine-tuning can actually reduce a model's accuracy.
 
 The paper is organized as follows.
-In \sec{datasets} we digest into details of both CLEVR and CoGenT datasets, emphasizing their differences.
+In \sec{datasets} we delve into details of both CLEVR and CoGenT datasets, emphasizing their differences.
 Next, in \sec{models}) we present both MAC and S-MAC models and explain what motivated the formulation of equations for the latter.
-\sec{experiments} discusses the most important findings when using transfer learning on CLEVR and both versions of CoGenT.
-In order to facilitate the lecture in \sec{transfer_learning} we cherry-picked a subset of experiments -- the whole table with comparison of both MAC and S-MAC models when training/fine-tuning/testing can be found in Appendix~\ref{sec:full_comparison}.
+\sec{experiments} discusses the most important results of using transfer learning 
+on CLEVR and on both versions of CoGenT.
+\sec{transfer_learning} focuses on a cherry-picked subset of experiments to highlight our findings; 
+see~Appendix~\ref{sec:full_comparison} for the complete set of results comparing MAC and S-MAC models when training/fine-tuning/testing on various datasets.
 In \sec{failures} we present examples that support hypothesis on the lack of disentanglement of concepts in both models.
-\sec{comparison} presents results obtained by other state-of-the-art models, and additionally indicates a problem with their reproducibility. 
-We conclude the paper in \sec{conclusion}.
+\sec{comparison} presents results obtained by other state-of-the-art models, and discusses the challenges faced  
+with their reproducibility. 
+\sec{conclusion} concludes the paper.
