--- a/arxiv/introduction.tex
+++ b/arxiv/introduction.tex
@@ -21,12 +21,12 @@ Last, we illustrate using CoGenT-B that, without adequate care, fine-tuning can 
 
 The paper is organized as follows.
 In \sec{datasets} we delve into details of both CLEVR and CoGenT datasets, emphasizing their differences.
-Next, in \sec{models}) we present both MAC and S-MAC models and explain what motivated the formulation of equations for the latter.
+Next, in \sec{models} we present both MAC and S-MAC models and explain what motivated the formulation of equations for the latter.
 \sec{experiments} discusses the most important results of using transfer learning 
 on CLEVR and on both versions of CoGenT.
 \sec{transfer_learning} focuses on a cherry-picked subset of experiments to highlight our findings; 
 see~Appendix~\ref{sec:full_comparison} for the complete set of results comparing MAC and S-MAC models when training/fine-tuning/testing on various datasets.
-In \sec{failures} we present examples that support hypothesis on the lack of disentanglement of concepts in both models.
+In \sec{failures} we show examples supporting hypothesis on the lack of disentanglement of concepts in both models.
 \sec{comparison} presents results obtained by other state-of-the-art models, and discusses the challenges faced  
 with their reproducibility. 
 \sec{conclusion} concludes the paper.
