--- a/arxiv/mac.tex
+++ b/arxiv/mac.tex
@@ -10,7 +10,7 @@ Besides, the input unit utilizes a pre-trained ResNet~\cite{he2016resnet} follow
 \begin{wrapfigure}[10]{r}[5pt]{0.4\textwidth}
 	\vspace{-15pt}
 	\centering
-	\includegraphics[width=\textwidth]{../img/mac_cell.pdf}
+	\includegraphics[width=\textwidth]{\dir/img/mac_cell.pdf}
 	\caption{The MAC cell, reproduced on the basis of~\cite{hudson2018compositional}.}
 	\label{fig:mac_cell}
 	\vspace{-5pt}
