--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -3,7 +3,7 @@
 Our experiments were intended to study MAC's and S-MAC's generalization as well as transfer learning abilities in different settings. We used CLEVR and CoGenT to address these different aspects.
 The first experiment studied the training time and the capability of the models to generalize on the same type of dataset that it was trained on. This was used mainly as a baseline for the further experiments that were intended to study how well the transfer learning performed in comparison to the baseline results.
 The second experiment studied the capability of the models to succeed in doing transfer learning from domain A to domain B when trained on different combinations of the respective domains. The third experiment was intended to see whether the performance improves if the model could be further trained on a small subset of the dataset from domain B.
-\tableref{results} presents the most important results, focusing on S-MAC in particular; see Appendix B for the entire table.
+\tableref{tab:results} presents the most important results, focusing on S-MAC in particular; see Appendix B for the entire table.
 
 For all experiments, the initial training procedure is as follows: we train the given model  for 20 epochs on 90\% of the training sets of CLEVR \& CoGenT separately. We keep the remaining 10\% for validating the model at every epoch, and use the original validation sets as test sets.
 %given that the ground truth labels for the true test sets are not available.
@@ -51,7 +51,7 @@ We used NVIDIA's GeForce GTX TITAN X GPUs. We followed the implementation detail
 
 		\bottomrule
 	\end{tabular}
-	\label{results}
+	\label{tab:results}
 \end{table}
 
 For the CLEVR dataset, the training wall time of MAC (row a) is consistent with what is reported in the original paper (roughly 30h of training for 20 epochs).
