--- a/2018_nips_vigil/vigil_supplemental.tex
+++ b/2018_nips_vigil/vigil_supplemental.tex
@@ -77,7 +77,7 @@
 % Little cheating to make our names fit:]
 \vskip -0.5cm
 \begin{abstract}
-We introduce a variant of the MAC model (Hudson and Manning, CVPR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster. We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art. Finally, in contrast, we demonstrate that improper fine-tuning can actually reduce a model's accuracy as well.
+We introduce a variant of the MAC model (Hudson and Manning, ICLR 2018) with a simplified set of equations that achieves comparable accuracy, while training faster. We evaluate both models on CLEVR and CoGenT, and show that, transfer learning with fine-tuning results in a 15 point increase in accuracy, matching the state of the art. Finally, in contrast, we demonstrate that improper fine-tuning can actually reduce a model's accuracy as well.
 \end{abstract}
 
 \input{appendix}
