different order of tables

--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -233,7 +233,7 @@ As a result we used 30k samples for fine-tuning and the remaining ones for testi
 When testing the model on CoGenT A, we used the whole validation set.
 
 Moreover, as we were using the validation sets for testing, we also splitted the training set and used 90\% for training and the remaining 10\% for validation during training.
-+We used the same methodology for all the results presented in this paper, i.e. Table 2 in the main paper, \tableref{tab:generalization_comparison} and \tableref{tab:results_full} here.
++We used the same methodology for all the results presented in this paper, i.e. Table 2 in the main paper, \tableref{tab:results_full} and \tableref{tab:generalization_comparison} here.
 
 \newpage
 \section{Illustration of failures of MAC/S-MAC on CLEVR}
