adding all necessary files

--- a/2018_nips_vigil_poster/main.tex
+++ b/2018_nips_vigil_poster/main.tex
@@ -107,7 +107,7 @@
 \includegraphics[width=4cm]{../img/ibm_research.png}
   } 
   % Title
-  	{\bf\textsc{Learning Beyond Simulated Physics}\vspace{0.2em}}
+  	{\bf\textsc{On transfer learning using a MAC model variant}\vspace{0.2em}}
   % Authors
   {
 	\textbf{Alexis Asseman, Tomasz Kornuta, Ahmet S. Ozcan}\\
